Prevented SQL injection with prepared statements
hope it works for all injection types, we'll see.

--- a/logged.html
+++ b/logged.html
@@ -11,7 +11,7 @@
 	<table border="0">
 	<tr>
 		What type of activity do you want to search?</br>
-		<select name ="Type" id="type">
+		<select name ="type" id="type">
 			<option value="Cinema">Cinema</option>
 			<option value="Theatre">Theatre</option>
 			<option value="Opera">Opera</option>
